Fixed issue with home page header wrapping.

--- a/app/styles/_home.less
+++ b/app/styles/_home.less
@@ -1,4 +1,5 @@
 #home-view {
+
   .btn {
     background-color: #FFFFFF;
     background-image: none;
@@ -9,15 +10,14 @@
   }
 
   #home-view-navigation {
-    margin-bottom: 10px;
+    width: 230px;
+    height: 42px;
+    margin: 0px auto 10px auto;
 
-    .nav {
-      display: block;
-      width: 72%;
-      margin: 0px auto;
+    .nav.btn-group {
 
       li {
-        padding: 0px 5px 0px 5px;
+        padding: 10px 15px;
       }
 
       li.active.btn {
@@ -106,3 +106,21 @@
     }
   }
 }
+
+.add-artifact {
+    bottom: 0px;
+    background-color: @cyan;
+    margin: 0px auto;
+    width: 18px;
+    height: 18px;
+    padding: 5px;
+    margin-top: 30px;
+  }
+
+  .plus-icon {
+    width: 18px;
+    height: 18px;
+    background-image: url('/img/addIcon_2x.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
